added buttons, social bar

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:wght@300;400;700&family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">  
 
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/bbb6952168.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="scss/main.scss">
     
     <title>Neebs Gaming - Design System</title>
@@ -90,7 +93,42 @@
         <section id="interactive">
             <h2 class="numbered-title uppercase"><span>03</span> Interactive Elements</h2>
 
-            
+            <div style="margin-bottom: 50vh; ">
+
+                <div>
+                    <!-- Navigation -->
+                </div>
+
+                <!-- Buttons -->
+                <div class="flex">
+                    <div class="column flow-sm" style="text-align: center;">
+                        <a href="#" class="button outline text-logo fs-500 fw-500">join the party</a>
+                        <p>Primary button with hover</p>
+                    </div>
+                    <div class="column flow-sm" style="text-align: center;">
+                        <a href="#" class="button icon text-logo fs-500 fw-500">watch more <i class="fas fa-arrow-right"></i></a>
+                        <p>Secondary button with hover</p>
+                    </div>
+                </div>
+
+                <!-- Social Bar -->
+                <div class="flow-sm" style="text-align: center;">
+                    <div>
+                        <a href="" class="text-white fs-800"><i class="fab fa-youtube"></i></a>
+                        <a href="" class="text-white fs-800"><i class="fab fa-twitch"></i></a>
+                        <a href="" class="text-white fs-800"><i class="fab fa-twitch"></i></a>
+                        <a href="" class="text-white fs-800"><i class="fab fa-instagram"></i></a>
+                        <a href="" class="text-white fs-800"><i class="fab fa-twitter"></i></a>
+                        <a href="" class="text-white fs-800"><i class="fab fa-facebook-square"></i></a>
+                    </div>
+                    <p>Different states of the social bar</p>
+                </div>
+
+                <div>
+                    <!-- Slider -->
+                </div>
+
+            </div>
 
 
         </section>
